js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-braceless-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
new
import
.
source
(
'
<
module
source
>
'
)
;
